# website

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  default.nix  shell.nix  submodules.toml
.github/workflows/: pages.yml
builder/: Cargo.toml  default.nix
builder/src/: main.rs  submodule.rs
src/: main.rs  submodule.rs  utils.rs
static/root/: back-alley.html  hugo.html  index.html
static/root/slides/: index.html
static/root/static/: theme.css
templates/: slides.html
