[package]
name = "website-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
notify = "6.1.1"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
tera = "1.19.1"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
